-
Bug
-
Resolution: Done
-
P2: Important
-
6.0.3
-
None
-
-
1
-
0e01b6122eba04e7d43747c14c9ea52dcc6a7462 (qt/qtquick3d/dev) 337561531874c4b9b0a90a6745081102616045e9 (qt/qtquick3d/6.1) 18beb144a76e76fa3a08be427e70d9fa4710f022 (qt/qtquick3d/6.0)
A `Joint` element without skeletonRoot (or with an invalid one) causes the whole application to crash without explanation.
The problem occurs if a Joint is placed as it is inside a `view3D` (obviously, the Joint shouldn't do anything if there is no skeleton)
How to reproduce:
Open simpleSkinning example. Anywhere inside the main.qml view element, add a `Joint` element, for exemple line 64 :
View3D { id: view Joint{} anchors.fill: parent [...]
Application will crash on launch.
The same will happen for any Qt Quick 3D example containing a view3D.
For Gerrit Dashboard: QTBUG-94185 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
352583,2 | Ignore Joints without a Skeleton | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
352709,2 | Ignore Joints without a Skeleton | 6.0 | qt/qtquick3d | Status: MERGED | +2 | 0 |
352710,2 | Ignore Joints without a Skeleton | 6.1 | qt/qtquick3d | Status: MERGED | +2 | 0 |