Ignore Joints without a Skeleton

Joints without setting skeletonRoot make a crash. They are ignored from
now.

Fixes: QTBUG-94185
Change-Id: Iccdc9d1a296377f61d0624af718ec9a09f241c7e
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 0e01b6122eba04e7d43747c14c9ea52dcc6a7462)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>